--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </ul> -->
             </section>
         
-            <section class="card information">
+            <section class="card-information">
                 <h3>Information</h3>
                 <p>Zaragoza, Spain</p>
                 <p>26° - Cloudy</p>
