upload chicago temple

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
     <main>
         <div class="image-container"> 
             <picture>
-                <source srcset="images/london-temple-small.webp" media="(max-width: 400px)">
-                <img src="images/london-temple-large.webp" alt="London Temple">
+                <source srcset="images/chicago-temple-small.webp" media="(max-width: 400px)">
+                <img src="images/chicago-Temple.webp" alt="Chicago Temple">
             </picture>
-            <div class="image-label">London Temple</div>
+            <div class="image-label">Chicago Temple</div>
         </div>   
         <div class ="card-wrapper">
             <section class="card">
