--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
     <script src="scripts/toogle.js"></script>
     <script src="scripts/visits.js"></script>
     <script src="scripts/links.js"></script>
+    <script src="scripts/weather.js"></script>
                    
 </body>
 </html>
