--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
             <section class="card-information">
                 <h3>Information</h3>
                 <p>Zaragoza, Spain</p>
-                <p>26° - Cloudy</p>
-                <p>Page visits: <span class="visits">Loading...</span></p>
+                <p id="temperature">Temperature: Loading...</p>
+                <p id="description">Condition: Loading...</p>
+                <div class="weather-icon"></div>
+                <p><span class="visits">Loading...</span></p>
 
                 
             </section>
