--- a/chamber/index.html
+++ b/chamber/index.html
@@ -80,10 +80,14 @@
             <section class="weather-card">
                     <h2>Weather</h2>
                     <div class="weather-info">
-                        <p><img src="images/cloudy.webp" alt="Cloudy weather" width="30px" height="30px"     class="temperature-icon">Current Temperature: <span id="temperature">45</span>°F</p>
-                        <p>Wind Speed: <span id="wind-speed">5</span> m/h</p>
+                        <p>Current Temperature: <span id="temperature">Loading...</span>°F</p>
+                        <p>Current Weather: <span id="weather-description">Loading...</span></p>
+                        <img id="weather-icon" alt="Weather icon">
+                        <p>Wind Speed: <span id="wind-speed">Loading...</span> m/h</p>
                         <p>Wind Chill: <span id="wind-chill"> </span></p>
                     </div>
+                    <h2>Three-Day Forecast</h2>
+                    <div id="forecast-container" class="forecast-container"></div>
                 </section>
         </div>     
             <section class="company-advertisements">
@@ -113,6 +117,8 @@
         <script src="scripts/hamburger-menu.js"></script>
         <script src="scripts/dark-mode.js"></script>
         <script src="scripts/windchills.js"></script>
+        <script src="scripts/weather.js"></script>
+        
     </div>
     </body>
 </html>
