--- a/chamber/index.html
+++ b/chamber/index.html
@@ -55,6 +55,14 @@
                         <img src="images/large-hero-image.webp" alt="Join Chamber of Commerce" width="1500" height="822">
                     </picture>
                 </div>
+
+                <section id="banner" class="banner">
+                    <div class="banner-content">
+                        <p>Join us for the Chamber of Commerce meet and greet on Wednesday at 7:00 p.m.!</p>
+                        <button id="close-btn" class="close-btn" onclick="closeBanner()">❌</button>
+                    </div>
+                </section>
+
             </section>
         <div class="flex-container">
                 <section class="current-events">
@@ -118,6 +126,7 @@
         <script src="scripts/dark-mode.js"></script>
         <script src="scripts/windchills.js"></script>
         <script src="scripts/weather.js"></script>
+        <script src="scripts/banner.js"></script>
         
     </div>
     </body>
