--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -5,11 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Zaragoza Chamber of Commerce - Your gateway to local business and community information.">
         <meta name="author" content="Sergio Flores">  
-        <title>ZARAGOZA CHAMBER OF COMMERCE</title>
+        <title>THANK YOU!</title>
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/base.css">
         <link rel="icon" href="images/favicon.ico" type="image/x-icon">  
-        <meta property="og:title" content="ZARAGOZA CHAMBER OF COMMERCE">
+        <meta property="og:title" content="Thank you for joining us">
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://sergiofdeveloper.github.io/wdd230/chamber/index.html">  
         <meta property="og:image" content="https://sergiofdeveloper.github.io/wdd230/chamber/images/chamber-of-commerce.jpg">  
