--- a/chamber/index.html
+++ b/chamber/index.html
@@ -88,10 +88,10 @@
             <section class="weather-card">
                     <h2>Weather</h2>
                     <div class="weather-info">
-                        <p>Current Temperature: <span id="temperature">Loading...</span>°F</p>
-                        <p>Current Weather: <span id="weather-description">Loading...</span></p>
+                        <p>Current Temperature: <span id="temperature">Loading...</span></p>
+                        <p><span id="weather-description">Loading...</span></p>
                         <img id="weather-icon" alt="Weather icon">
-                        <p>Wind Speed: <span id="wind-speed">Loading...</span> m/h</p>
+                        <p>Wind Speed: <span id="wind-speed">Loading...</span></p>
                         <p>Wind Chill: <span id="wind-chill"> </span></p>
                     </div>
                     <h2>Three-Day Forecast</h2>
