--- a/chamber/index.html
+++ b/chamber/index.html
@@ -56,15 +56,15 @@
                     </picture>
                 </div>
 
-                <section id="banner" class="banner">
+                <div id="banner" class="banner">
                     <div class="banner-content">
                         <p>Join us for the Chamber of Commerce meet and greet on Wednesday at 7:00 p.m.!</p>
                         <button id="close-btn" class="close-btn" onclick="closeBanner()">❌</button>
                     </div>
-                </section>
+                </div>
 
             </section>
-        <div class="flex-container">
+            <div class="flex-container">
                 <section class="current-events">
                     <h2>Events</h2>
                     <ul>
