--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Sergio Flores">
     <meta name="description" content="Sergio Flores- Zaragoza Chamber of Commerce Site Plan.">
-    <title>Sergio Flores- Zaragoza Chamber of Commerce</title>
+    <title>Site Plan - Zaragoza Chamber of Commerce</title>
     
     <link rel="stylesheet" href="styles/styles.css">
 </head>
@@ -14,7 +14,7 @@
         <h1>Zaragoza Chamber of Commerce - Site Plan</h1>
         <section>
             <h2>Site Name</h2>
-            <p>Zaragoza Chamber of Commerce.</p>
+            <p>Zaragoza Chamber of Commerce</p>
         </section>
         <section>
             <h2>Site Purpose</h2>
