--- a/chamber/index.html
+++ b/chamber/index.html
@@ -99,17 +99,11 @@
                 </section>
         </div>     
             <section class="company-advertisements">
-                <div class="advertisement">
-                    <h3>Member Spotlight 1</h3>
-                    <p>Great Service</p>   
+                <div class="advertisement" id="spotlight1">    
                 </div>
-                <div class="advertisement">
-                    <h3>Member Spotlight 2</h3>
-                    <p>Incredible offers</p> 
+                <div class="advertisement" id="spotlight2">  
                 </div>
-                <div class="advertisement">
-                    <h3>Member Spotlight 3</h3>
-                    <p>Such an expertise!!!</p> 
+                <div class="advertisement" id="spotlight3">    
                 </div>
             </section>
         </main>
@@ -127,6 +121,7 @@
         <script src="scripts/windchills.js"></script>
         <script src="scripts/weather.js"></script>
         <script src="scripts/banner.js"></script>
+        <script src="scripts/spotlight.js"></script>
         
     </div>
     </body>
