--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -26,7 +26,9 @@
             </div> 
             <button id="hamburger">&#8801;</button>
             <div class="logo">
+                <a href="index.html">
                 <img src="images/logo.webp" alt="Zaragoza Chamber of Commerce">
+                </a>
             </div>     
             <div class="header-content"> 
                 <h1>ZARAGOZA CHAMBER OF COMMERCE</h1>
