correct section advertisement

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -98,14 +98,14 @@
                     <div id="forecast-container" class="forecast-container"></div>
                 </section>
         </div>     
-            <section class="company-advertisements">
+            <div class="company-advertisements">
                 <div class="advertisement" id="spotlight1">    
                 </div>
                 <div class="advertisement" id="spotlight2">  
                 </div>
                 <div class="advertisement" id="spotlight3">    
                 </div>
-            </section>
+            </div>
         </main>
         <footer>
             <div class="development-info">
