--- a/chamber/index.html
+++ b/chamber/index.html
@@ -90,7 +90,7 @@
                     <div class="weather-info">
                         <p>Current Temperature: <span id="temperature">Loading...</span></p>
                         <p><span id="weather-description">Loading...</span></p>
-                        <img id="weather-icon" src="placeholder.png" alt="Weather icon">
+                        <img id="weather-icon" src="images/placeholder.png" alt="Weather icon">
                         <p>Wind Speed: <span id="wind-speed">Loading...</span></p>
                         <p>Wind Chill: <span id="wind-chill"> </span></p>
                     </div>
