--- a/chamber/index.html
+++ b/chamber/index.html
@@ -32,7 +32,7 @@
                 <h1>ZARAGOZA CHAMBER OF COMMERCE</h1>
                 <nav>
                     <ul class="menu">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index.html" class="active">Home</a></li>
                         <li><a href="discover.html">Discover</a></li>
                         <li><a href="directory.html">Directory</a></li>
                         <li><a href="join.html">Join</a></li>
