--- a/chamber/index.html
+++ b/chamber/index.html
@@ -98,6 +98,7 @@
                     <div id="forecast-container" class="forecast-container"></div>
                 </section>
         </div>     
+        <h1>Our members say...</h1>
             <div class="company-advertisements">
                 <div class="advertisement" id="spotlight1">    
                 </div>
