--- a/rental/index.html
+++ b/rental/index.html
@@ -11,7 +11,7 @@
         <link rel="icon" href="images/favicon.ico" type="image/x-icon">  
         <meta property="og:title" content="SCOOTS">
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://sergiofdeveloper.github.io/wdd230/rental/xxx.jpg">  
+        <meta property="og:url" content="https://sergiofdeveloper.github.io/wdd230/rental/index.html">  
         <meta property="og:image" content="https://sergiofdeveloper.github.io/wdd230/rental/xxx.jpg">  
         <meta property="og:description" content="Scoots ">  
     </head>
