--- a/rental/index.html
+++ b/rental/index.html
@@ -12,6 +12,6 @@
         <meta property="og:title" content="SCOOTS">
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://sergiofdeveloper.github.io/wdd230/rental/index.html">  
-        <meta property="og:image" content="https://sergiofdeveloper.github.io/wdd230/rental/xxx.jpg">  
+        <meta property="og:image" content="https://sergiofdeveloper.github.io/wdd230/rental/scoots_rental.jpg">  
         <meta property="og:description" content="Scoots ">  
     </head>
