--- a/rental/index.html
+++ b/rental/index.html
@@ -21,6 +21,7 @@
             <div class="logo">
                 <img src="images/logo-gold.png" alt="Scoots rental logo">
             </div>
+            <button class="menu-toggle" onclick="toggleMenu()">&#9776;</button>
             <div class="menu">
                 <div class="menu-section">
                     <ul>
@@ -51,12 +52,14 @@
                 <picture>
                     <source srcset="images/small-hero-image.webp" media="(max-width: 500px)">
                     <source srcset="images/large-hero-image.webp" media="(max-width: 1000px)">
-                    <img src="images/hero-image.jpg" alt="Scoots Rental">
+                    <img src="images/large-hero-image.webp" alt="Scoots Rental">
                 </picture>
             </div>
         </main>
         <footer>    
 
         </footer>
+
+        <script src="scripts/hamburger-menu.js"></script>
     </body>   
 </html>
