--- a/rental/index.html
+++ b/rental/index.html
@@ -21,15 +21,17 @@
             <div class="logo">
                 <img src="images/logo-gold.png" alt="Scoots rental logo">
             </div>
-            <button class="menu-toggle" onclick="toggleMenu()">&#9776;</button>
+           
             <div class="menu">
-                <div class="menu-section">
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="rentals.html">Rentals</a></li>
-                        <li><a href="reservation.html">Reservation</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
+                <div class="menu-links">
+                    <nav>
+                        <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="rentals.html">Rentals</a></li>
+                            <li><a href="reservation.html">Reservation</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                        </ul>
+                    </nav>
                 </div>
                 <div class="social-media">
                     <a href="#" target="_blank">
