--- a/rental/index.html
+++ b/rental/index.html
@@ -59,9 +59,15 @@
             </div>
         </main>
         <footer>    
-
+            <div class="development-info">
+                <p>@2023 Scoots Rental</p>
+                <p>Sergio Flores</p> 
+                <p>WDD 230 Project</p>
+                <p>Last Modified: <span id="last-modified"></span></p>
+            </div>
         </footer>
 
         <script src="scripts/hamburger-menu.js"></script>
+        <script src="scripts/last-modified.js"></script>
     </body>   
 </html>
