--- a/rental/index.html
+++ b/rental/index.html
@@ -21,10 +21,10 @@
             <div class="logo">
                 <img src="images/logo-gold.png" alt="Scoots rental logo">
             </div>
-            <div class="menu-btn">&#9776; Menu</div>
+            <div class="menu-btn">&#9776;</div>
             <div class="menu">
                 <div class="menu-links">
-                    <nav>
+                    <nav class="menu-column">
                         <ul>
                             <li><a href="index.html">Home</a></li>
                             <li><a href="rentals.html">Rentals</a></li>
