--- a/rental/contact.html
+++ b/rental/contact.html
@@ -19,7 +19,9 @@
     <body>
         <header>
             <div class="logo">
-                <img src="images/logo-gold.png" alt="Scoots rental logo">
+                <a href="index.html">
+                    <img src="images/logo-gold.png" alt="Scoots rental logo">
+                </a>
             </div>
             <div class="menu-btn">&#9776;</div>
             <div class="menu">
@@ -54,13 +56,33 @@
         <main>        
             
         </main>
-        <footer>    
+        <footer> 
+            <div class="footer-content">
+                <div class="centered-content"></div>
+                    <div class="logo-footer">
+                        <a href="index.html">
+                        <img src="images/small-logo.png" alt="Scoots rental logo">
+                        </a>
+                    </div>
+                    <div class="footer-menu">
+                        <nav>
+                            <ul>
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="rentals.html">Rentals</a></li>
+                                <li><a href="reservation.html">Reservation</a></li>
+                                <li><a href="contact.html">Contact</a></li>
+                            </ul>
+                        </nav>
+                    </div>    
+                </div>
+            </div>   
+            <hr>
             <div class="project-info">
-                <p>@2023 Scoots Rental</p>
-                <p>Sergio Flores</p> 
-                <p>WDD 230 Project</p>
+                <p>@2023 Scoots Rental | Sergio Flores | WDD 230 Project</p>
                 <p>Last Modified: <span id="last-modified"></span></p>
+            </div>
         </footer>
+
         <script src="scripts/hamburger-menu.js"></script>
         <script src="scripts/last-modified.js"></script>
     </body>   
