--- a/rental/reservation.html
+++ b/rental/reservation.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content=" Rental Scooter Business.">
         <meta name="author" content="Sergio Flores">  
-        <title>SCOOTS Rental</title>
+        <title>Rent your vehicule</title>
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/base.css">
         <link rel="icon" href="images/favicon.ico" type="image/x-icon">  
@@ -19,7 +19,9 @@
     <body>
         <header>
             <div class="logo">
-                <img src="images/logo-gold.png" alt="Scoots rental logo">
+                <a href="index.html">
+                    <img src="images/logo-gold.png" alt="Scoots rental logo">
+                </a>
             </div>
             <div class="menu-btn">&#9776;</div>
             <div class="menu">
@@ -54,15 +56,33 @@
         <main>        
            
         </main>
-        <footer>
+        <footer> 
+            <div class="footer-content">
+                <div class="centered-content"></div>
+                    <div class="logo-footer">
+                        <a href="index.html">
+                        <img src="images/small-logo.png" alt="Scoots rental logo">
+                        </a>
+                    </div>
+                    <div class="footer-menu">
+                        <nav>
+                            <ul>
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="rentals.html">Rentals</a></li>
+                                <li><a href="reservation.html">Reservation</a></li>
+                                <li><a href="contact.html">Contact</a></li>
+                            </ul>
+                        </nav>
+                    </div>    
+                </div>
+            </div>   
+            <hr>
             <div class="project-info">
-                <p>@2023 Scoots Rental</p>
-                <p>Sergio Flores</p> 
-                <p>WDD 230 Project</p>
+                <p>@2023 Scoots Rental | Sergio Flores | WDD 230 Project</p>
                 <p>Last Modified: <span id="last-modified"></span></p>
-        </div>    
-
+            </div>
         </footer>
+
         <script src="scripts/hamburger-menu.js"></script>
         <script src="scripts/last-modified.js"></script>
     </body>   
