--- a/chamber/index.html
+++ b/chamber/index.html
@@ -69,20 +69,25 @@
                     <h2>Events</h2>
                     <ul>
                         <li>
-                        <h3><a href="#">Business creation and Managment peer training</a></h3>
-                        <p>13-23 November</p>
-                        <p>Center of Art and Technology</p>
+                            <h3><a href="#">Business creation and Managment peer training</a></h3>
+                            <p>19-27 November</p>
+                            <p>Center of Art and Technology</p>
                         </li>
                         <li>
-                        <h3><a href="#">Practical Design worshop for small companies</a></h3>
-                        <p>20-21 Nov</p>
-                        <p>Walqa Technology Park</p>
+                            <h3><a href="#">Practical Design worshop for small companies</a></h3>
+                            <p>25-27 Nov</p>
+                            <p>Walqa Technology Park</p>
                         </li>
                         <li>
-                        <h3><a href="#">AI applied to company Managment</a></h3>
-                        <p>22 November</p>
-                        <p>Ibercaja Campus</p>
-                        </li>             
+                            <h3><a href="#">AI applied to company Managment</a></h3>
+                            <p>01 December</p>
+                            <p>Ibercaja Campus</p>
+                            </li>   
+                        <li>
+                            <h3><a href="#">E-Commerce Days</a></h3>
+                            <p>6-8 December</p>
+                            <p>Main Hall Miguel de Cervantes</p>
+                        </li>          
                     </ul>
                 </section>
             <section class="weather-card">
