--- a/rental/contact.html
+++ b/rental/contact.html
@@ -59,7 +59,7 @@
                 <fieldset>
                     <legend>Please fill out the form to contact us</legend>
                     <label class="top">First Name*<input type="text" name="fname" required></label>
-                    <label class="top">Last Name<input type="text" name="lname" ></label>
+                    <label class="top">Last Name<input type="text" name="lname" required></label>
                     <label class="top">Email*<input type="email" name="email*" placeholder="someone@gmail.com" required></label>
                     <label class="top">Country
                         <select name="Country">
