--- a/rental/contact.html
+++ b/rental/contact.html
@@ -84,6 +84,22 @@
                 <input type="submit" value="Send" class="submitBtn">
                 </form>
             </div>
+            <div class="addresses">
+                    <div class="address1"> 
+                        <h2>Playa del Carmen-Cozumel </h2>
+                        <p>Avenida Rafael E. Melgar 57</p>
+                        <p>77600 Cozumel, Q.R., México</p>
+                        <p>Office +52 987 876 1394</p>
+                        <p>Directions/Map</p>
+                    </div> 
+                    <div class="address2"> 
+                        <h2>Puerta Maya</h2>
+                        <p>Carr. Costera Sur km 4.57</p>
+                        <p>77675 Cozumel, Q.R., México</p>
+                        <p>Office +52 987 857 3084</p>
+                        <p>Directions/Map</p>
+                    </div>
+            </div>
         </main>
         <footer> 
             <div class="footer-content">
@@ -108,11 +124,11 @@
             <hr>
             <div class="project-info">
                 <p>@2023 Scoots Rental | Sergio Flores | WDD 230 Project</p>
-                <p>Last Modified: <span id="last-modified"></span></p>
+                <p><a href="attributions.html">attributions</a></p>
             </div>
         </footer>
 
         <script src="scripts/hamburger-menu.js"></script>
-        <script src="scripts/last-modified.js"></script>
+        
     </body>   
 </html>
