--- a/rental/contact.html
+++ b/rental/contact.html
@@ -90,14 +90,17 @@
                         <p>Avenida Rafael E. Melgar 57</p>
                         <p>77600 Cozumel, Q.R., México</p>
                         <p>Office +52 987 876 1394</p>
-                        <p>Directions/Map</p>
+                        <p>Directions/Map:</p>
+                          <p><a href="https://www.google.com/maps?q=Avenida+Rafael+E.+Melgar+57,+77600+Cozumel,+Q.R.,+México" target="_blank">View on Google Maps</a></p>
                     </div> 
                     <div class="address2"> 
                         <h2>Puerta Maya</h2>
                         <p>Carr. Costera Sur km 4.57</p>
                         <p>77675 Cozumel, Q.R., México</p>
                         <p>Office +52 987 857 3084</p>
-                        <p>Directions/Map</p>
+                        <p>Directions/Map:</p>
+                        <p><a href="https://www.google.com/maps?q=Carr.+Costera+Sur+km+4.57,+77675+Cozumel,+Q.R.,+México" target="_blank">View on Google Maps</a></p>
+                        
                     </div>
             </div>
         </main>
