--- a/rental/rentals.html
+++ b/rental/rentals.html
@@ -55,20 +55,7 @@
         </header>   
         <main>        
             <h2>Rentals Information</h2>
-    <table>
-        <thead>
-            <tr>
-                <th>Rental Type</th>
-                <th>Max. Persons</th>
-                <th>Reservation - Half Day</th>
-                <th>Reservation - Full Day</th>
-                <th>Walk in - Half Day</th>
-                <th>Walk in - Full Day</th>
-                <th>Image</th>
-            </tr>
-        </thead>
-        <tbody id="rentalsTableBody"></tbody>
-    </table>
+            <div id="rentalsTableContainer"></div>
 
         </main>
         <footer> 
