--- a/rental/rentals.html
+++ b/rental/rentals.html
@@ -81,7 +81,7 @@
             <hr>
             <div class="project-info">
                 <p>@2023 Scoots Rental | Sergio Flores | WDD 230 Project</p>
-                <p><a href="attributions.html">attributions</a></p>
+                <p><a href="attributions.html">Attributions</a></p>
             </div>
         </footer>
         <script src="scripts/hamburger-menu.js"></script>
