--- a/rental/reservation.html
+++ b/rental/reservation.html
@@ -54,7 +54,8 @@
             </div>
         </header>    
         <main id="reservations">  
-            <div id="form-request">     
+            <div id="form-request">
+            <h1> Make a reservation </h1>
             <form method="get" action="registered.html">
                 <label for="date">Date of the rental*</label>
                 <input type="date" id="date" name="date" required>
@@ -79,7 +80,7 @@
                 <div class="number-input">
                     <input type="number" id="number" name="number" value="1" min="1" max="5" required>
                 </div>
-    
+                <br>
                 <label for="phone">Phone Number*</label>
                 <input type="tel" id="phone" name="phone" required>
     
@@ -101,7 +102,7 @@
                         <option value="guerrero">Guerrero</option>
                         <option value="puebla">Puebla</option>
                         <option value="oaxaca">Oaxaca</option>
-                        <option value="-----">--------------------</option>
+                        <option value="--">--------------------</option>
                         <option value="australia">Australia</option>
                         <option value="brazil">Brazil</option>
                         <option value="belice">Belice</option>
