--- a/rental/thanks.html
+++ b/rental/thanks.html
@@ -52,37 +52,14 @@
                 </div>             
             </div>
         </header>   
-        <main class="contact-main">   
-            <div class="background-form">
-                <h1>If you have any questions or want more information, please send us a message</h1>
-                <form method="get" action="thanks.html">
-                <fieldset>
-                    <legend>Please fill out the form to contact us</legend>
-                    <label class="top">First Name*<input type="text" name="fname" required></label>
-                    <label class="top">Last Name<input type="text" name="lname" required></label>
-                    <label class="top">Email*<input type="email" name="email*" placeholder="someone@gmail.com" required></label>
-                    <label class="top">Country
-                        <select name="Country">
-                                <option value="">Please Select your country      &#9662</option>
-                                <option value="argentina">Argentina</option>
-                                <option value="australia">Australia</option>
-                                <option value="brazil">Brazil</option>
-                                <option value="belice">Belice</option>
-                                <option value="canada">Canada</option>
-                                <option value="china">China</option>
-                                <option value="france">France</option>
-                                <option value="germany">Germany</option>
-                                <option value="mexico">Mexico</option>
-                                <option value="russia">Russia</option>
-                                <option value="spain">Spain</option>
-                                <option value="uk">United Kingdom</option>
-                                <option value="usa">United States</option>  
-                                <option value="other">Other</option>                   
-                        </select>
-                    <label class="top">Message*<textarea name="message" rows="4" required></textarea></label>
-                </fieldset>
-                <input type="submit" value="Send" class="submitBtn">
-                </form>
+        <main>   
+            <div id="thankyou">
+                <h2>Thank you!</h2>
+                <p>We have received you contact request. We will get back to you as soon as possible</p>
+            </div>
+            <div id="funstuff">
+                <p>In the meanwhile why dont you check all the fun activities you can do while in Cozumel</p>
+            </div>
             </div>
         </main>
         <footer> 
