--- a/rental/reservation.html
+++ b/rental/reservation.html
@@ -129,20 +129,21 @@
                 </form>
                 </div> 
             </div>    
-            <div id="Rental-information">
-                <h2>Rental Services and Agreements</h2>
-                <p>A $50 security deposit is required to confirm reservations.</p>
-                <p>A valid drivers license is required in hand at the time of rental.</p>
-                <p>No one under the age of 12 years of age are allowed to ride on the scooters.</p>
-                <p>Fuel charge is not included.</p>
-                <p>Unlimited mileage.</p>
-                <p>Half day stands for 3 hours</p>
-                <p>Liability insurance is included.</p>
-                <p>Damage insurance is available for purchase.</p>
-                <p>Free delivery to Cozumel hotels or Airbnbs for 2+ day rentals.</p>
-                <p>Payment via Google Pay, Apple Pay, cash, credit card, debit card, or venmo.</p>
-                <p>Rentals may be returned to either physical location.</p>
-
+                <div id="rental-information">
+                    <div id="rental-wrapper">
+                    <h2>Rental Services and Agreements</h2>
+                    <p>A $50 security deposit is required to confirm reservations.</p>
+                    <p>A valid drivers license is required in hand at the time of rental.</p>
+                    <p>No one under the age of 12 years of age are allowed to ride on the scooters.</p>
+                    <p>Fuel charge is not included.</p>
+                    <p>Unlimited mileage.</p>
+                    <p>Half day stands for 3 hours</p>
+                    <p>Liability insurance is included.</p>
+                    <p>Damage insurance is available for purchase.</p>
+                    <p>Free delivery to Cozumel hotels or Airbnbs for 2+ day rentals.</p>
+                    <p>Payment via Google Pay, Apple Pay, cash, credit card, debit card, or venmo.</p>
+                    <p>Rentals may be returned to either physical location.</p>
+                </div>
             </div>
         </main>
         <footer> 
