--- a/rental/rentals.html
+++ b/rental/rentals.html
@@ -59,9 +59,7 @@
                 <div id="rentalsTableContainer"></div>
             </div> 
             <h1>Our fleet</h1>
-            <div id="fleet">
-                
-            </div>
+            <div id="fleet"></div>
         </main>
         <footer> 
             <div class="footer-content">
