--- a/rental/rentals.html
+++ b/rental/rentals.html
@@ -56,9 +56,14 @@
         <main>    
             <div id="prices">   
                 <h1>Rentals Information</h1>
-                <div id="rentalsTableContainer"></div>
+                <div id="rentalsTableContainer">
             </div> 
-            <h1>Our fleet</h1>
+            <div id="fleet-container"></div>
+                 <div id="logo-fleet">
+                    <h1>Our fleet</h1>
+                    <img id="fleet-image" src="images/honda-forza.png" alt="Honda Forza">
+                </div>
+            </div>
             <div id="fleet"></div>
         </main>
         <footer> 
