--- a/rental/rentals.html
+++ b/rental/rentals.html
@@ -55,9 +55,11 @@
         </header>   
         <main>    
             <div id="prices">   
-                <h1>Rentals Information</h1>
-                <div id="rentalsTableContainer">
-            </div> 
+                <div id="logo-prices">
+                    <h1>Rentals Information</h1>
+                    <img id="rental-image" src="images/rental-info.png" alt="Rental information">
+                </div> 
+                    <div id="rentalsTableContainer"></div> 
             <div id="fleet-container"></div>
                  <div id="logo-fleet">
                     <h1>Our fleet</h1>
