--- a/rental/reservation.html
+++ b/rental/reservation.html
@@ -27,12 +27,12 @@
             <div class="menu">
                 <div class="menu-links">
                     <nav class="menu-column">
-                        <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="rentals.html">Rentals</a></li>
-                            <li><a href="reservation.html">Reservation</a></li>
-                            <li><a href="contact.html">Contact</a></li>
-                        </ul>
+                            <ul>
+                                <li class="nav-item home"><a href="index.html">Home</a></li>
+                                <li class="nav-item rentals"><a href="rentals.html">Rentals</a></li>
+                                <li class="nav-item reservation"><a href="reservation.html">Reservation</a></li>
+                                <li class="nav-item contact"><a href="contact.html">Contact</a></li>
+                            </ul>
                     </nav>
                 </div>
                 
