--- a/rental/contact.html
+++ b/rental/contact.html
@@ -28,10 +28,10 @@
                 <div class="menu-links">
                     <nav class="menu-column">
                         <ul>
-                            <li class="nav-item home"><a href="index.html">Home</a></li>
-                            <li class="nav-item rentals"><a href="rentals.html">Rentals</a></li>
-                            <li class="nav-item reservation"><a href="reservation.html">Reservation</a></li>
-                            <li class="nav-item contact"><a href="contact.html">Contact</a></li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="rentals.html">Rentals</a></li>
+                            <li><a href="reservation.html">Reservation</a></li>
+                            <li class="active"><a href="contact.html">Contact</a></li>
                         </ul>
                     </nav>
                 </div>
