--- a/rental/index.html
+++ b/rental/index.html
@@ -25,13 +25,13 @@
             </div>
             <div class="menu-btn">&#9776;</div>
             <div class="menu">
-                <div class="menu-links">
+                <div class="menu-links show-menu">
                     <nav class="menu-column">
                         <ul>
-                            <li class="nav-item home"><a href="index.html">Home</a></li>
-                            <li class="nav-item rentals"><a href="rentals.html">Rentals</a></li>
-                            <li class="nav-item reservation"><a href="reservation.html">Reservation</a></li>
-                            <li class="nav-item contact"><a href="contact.html">Contact</a></li>
+                            <li class="active"><a href="index.html">Home</a></li>
+                            <li><a href="rentals.html">Rentals</a></li>
+                            <li><a href="reservation.html">Reservation</a></li>
+                            <li><a href="contact.html">Contact</a></li>
                         </ul>
                     </nav>
                 </div>
