--- a/rental/attributions.html
+++ b/rental/attributions.html
@@ -53,7 +53,9 @@
             </div>
         </header>   
         <main>   
-            https://powersports.honda.com/
+            <p>https://powersports.honda.com/</p>
+            <p>https://www.onlinephotosoft.com/es/</p>
+            <p>https://www.freepik.com/</p>
             
         </main>
         <footer> 
@@ -79,7 +81,7 @@
             <hr>
             <div class="project-info">
                 <p>@2023 Scoots Rental | Sergio Flores | WDD 230 Project</p>
-                <p>Last Modified: <span id="last-modified"></span></p>
+                <p><a href="attributions.html">attributions</a></p>
             </div>
         </footer>
 
