--- a/rental/index.html
+++ b/rental/index.html
@@ -86,7 +86,7 @@
             <hr>
             <div class="project-info">
                 <p>@2023 Scoots Rental | Sergio Flores | WDD 230 Project</p>
-                <p>Last Modified: <span id="last-modified"></span></p>
+                <p><a href="attributions.html">attributions</a></p>
             </div>
         </footer>
 
