--- a/rental/registered.html
+++ b/rental/registered.html
@@ -109,7 +109,7 @@
             <hr>
             <div class="project-info">
                 <p>@2023 Scoots Rental | Sergio Flores | WDD 230 Project</p>
-                 
+                <p><a href="attributions.html">attributions</a></p>
             </div>
         </footer>
 
