--- a/rental/contact.html
+++ b/rental/contact.html
@@ -90,6 +90,7 @@
                 </form>
             </div>
             <div class="addresses">
+                <h1>Locations</h1>
                     <div class="address1"> 
                         
                         <h2><img src="images/home-location.png" alt="Home location Playa del Carmen">Playa del Carmen-Cozumel </h2>
