--- a/rental/rentals.html
+++ b/rental/rentals.html
@@ -54,11 +54,13 @@
             </div>
         </header>   
         <main>    
+            
             <div id="prices">   
                 <div id="logo-prices">
                     <h1>Rentals Information</h1>
                     <img id="rental-image" src="images/rental-info.png" alt="Rental information">
                 </div> 
+                <h1>Pricing Scooter, Jeeps and ATVs</h1>
                     <div id="rentalsTableContainer"></div> 
             <div id="fleet-container"></div>
                  <div id="logo-fleet">
