--- a/rental/index.html
+++ b/rental/index.html
@@ -54,12 +54,18 @@
             </div>
         </header>   
         <main>        
-            <div class="container">
+            <div class="hero-container">
                 <picture>
                     <source srcset="images/small-hero-image.webp" media="(max-width: 500px)">
                     <source srcset="images/large-hero-image.webp" media="(max-width: 1000px)">
                     <img src="images/large-hero-image.webp" alt="Scoots Rental">
                 </picture>
+                <div class="overlay">
+                    <div class="content">
+                        <img src="images/deal.webp" alt="Deal of the month">
+                        <button>Book Now!</button>
+                    </div>
+                </div>
             </div>
         </main>
         
