--- a/rental/rentals.html
+++ b/rental/rentals.html
@@ -60,7 +60,7 @@
                     <h1>Rentals Information</h1>
                     <img id="rental-image" src="images/rental-info.png" alt="Rental information">
                 </div> 
-                <h1>Pricing Scooter, Jeeps and ATVs</h1>
+                <h1 id="pricing">Pricing Scooter, Jeeps and ATVs</h1>
                     <div id="rentalsTableContainer"></div> 
             <div id="fleet-container"></div>
                  <div id="logo-fleet">
