--- a/rental/index.html
+++ b/rental/index.html
@@ -63,7 +63,7 @@
                 <div class="overlay">
                     <div class="content">
                         <img src="images/deal.webp" alt="Deal of the month">
-                        <button>Book Now!</button>
+                        <button><a href="reservations.html">Book Now!</a></button> 
                     </div>
                 </div>
             </div>
