--- a/rental/contact.html
+++ b/rental/contact.html
@@ -98,18 +98,33 @@
                         <p>77600 Cozumel, Q.R., México</p>
                         <p>Office +52 987 876 1394</p>
                         <p>Directions/Map:</p>
-                          <p><a href="https://www.google.com/maps?q=Avenida+Rafael+E.+Melgar+57,+77600+Cozumel,+Q.R.,+México" target="_blank">View on Google Maps</a></p>
-                    </div> 
+                        <div class="google-map">
+                            <iframe
+                                width="100%"
+                                height="300"
+                                frameborder="0"
+                                style="border:0"
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3763.2364729751747!2d-86.96105698507499!3d20.508461486258157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4eefc8d25c14d9%3A0xf7f44f371548d77a!2sAvenida%20Rafael%20E.%20Melgar%2057%2C%2077600%20Cozumel%2C%20Q.R.%2C%20Mexico!5e0!3m2!1sen!2sus!4v1641639584815!5m2!1sen!2sus"
+                                allowfullscreen
+                            ></iframe>
+                        </div>                   
                     <div class="address2">
-                        
                         <h2><img src="images/home-location.png" alt="Home location Puerta Maya">Puerta Maya</h2>
-                        <p>Carr. Costera Sur km 4.57</p>
-                        <p>77675 Cozumel, Q.R., México</p>
+                        <p>Quintana Roo C-1 1a</p>
+                        <p> 77675 Cozumel, Q.R., México</p>
                         <p>Office +52 987 857 3084</p>
                         <p>Directions/Map:</p>
-                        <p><a href="https://www.google.com/maps?q=Carr.+Costera+Sur+km+4.57,+77675+Cozumel,+Q.R.,+México" target="_blank">View on Google Maps</a></p>
-                        
-                    </div>
+                        <p><a href="https://www.google.com/maps?q=Carr.+Costera+Sur+km+4+77675+Cozumel,+Q.R.,+México" target="_blank">View on Google Maps</a></p>
+                        <div class="google-map">
+                            <iframe
+                                width="100%"
+                                height="300"
+                                frameborder="0"
+                                style="border:0"
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3763.229796898438!2d-86.96155368442995!3d20.508557986253996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4eefd8e7e2b081%3A0x5a64935bfbb80a71!2sPuerta%20Maya!5e0!3m2!1sen!2sus!4v1641639846564!5m2!1sen!2sus"
+                                allowfullscreen
+                            ></iframe>
+                        </div>
             </div>
         </div>
         </main>
