--- a/rental/contact.html
+++ b/rental/contact.html
@@ -121,10 +121,10 @@
                                 height="300"
                                 frameborder="0"
                                 style="border:0"
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3763.229796898438!2d-86.96155368442995!3d20.508557986253996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4eefd8e7e2b081%3A0x5a64935bfbb80a71!2sPuerta%20Maya!5e0!3m2!1sen!2sus!4v1641639846564!5m2!1sen!2sus"
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3763.229796898438!2d-86.96155368442995!3d20.508557986253996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4eefc8fbaa6e71%3A0xdf2e6c5b3b6b4463!2sPuerta%20Maya%2C%20Carretera%20Costera%20Sur%20Km%2016.5%2C%2077600%20Cozumel%2C%20Q.R.%2C%20Mexico!5e0!3m2!1sen!2sus!4v1641639846564!5m2!1sen!2sus"
                                 allowfullscreen
                             ></iframe>
-                        </div>
+                    </div>
             </div>
         </div>
         </main>
