--- a/rental/index.html
+++ b/rental/index.html
@@ -18,6 +18,7 @@
 
     <body>
         <header>
+            <div id="high-temp-message" class="message-container"></div>
             <div class="logo">
                 <a href="index.html">
                 <img src="images/logo-gold.png" alt="Scoots rental logo">
@@ -132,6 +133,6 @@
         <script src="scripts/hamburger-menu.js"></script>
         <script src="scripts/last-modified.js"></script>
         <script src="scripts/weather.js"></script>
-        <script src="scripts/forecast.js"></script>
+      
     </body>   
 </html>
