--- a/rental/index.html
+++ b/rental/index.html
@@ -73,12 +73,14 @@
                     <h1>1</h1>
                     <h2>Choose your vehicle</h2>
                     <p>Ready to explore Cozumel? Choose one of our scooters, ATVs or Jeeps to explore and enjoy the secrets if the island.</p>
+                    <p><a href="rentals.html">Learn more</a></p>
                 </div>
                 <div class="info">
                     <h1>2</h1>
                     <h2>How much time do you have?</h2>
                     <p>Whether you have the whole day or just a few hours you can find prices starting at $25.
-                        And if you make the reservation online you can save some money. </p>
+                        And if you make the reservation online you can save some money.</p>
+                        <p><a href="reservation.html">Learn more</a></p>
                 </div>
                 <div class="info">
                     <h1>3</h1>
