--- a/rental/index.html
+++ b/rental/index.html
@@ -96,31 +96,37 @@
                             <h2>Punta Sur Eco Beach Park</h2>
                             <p>The largest nature reserve in Cozumel.
                                 Its wide beaches of fine white sand, its spectacular views from the Celarain lighthouse and an amazing boat ride through the Colombia Lagoon make it the ideal place for nature lovers.</p>
+                                <p><a href="https://cozumelparks.com/punta-sur/">Learn More</a></p>
                         </div>
                         <div class="visit-cozumel">
                             <img src="images/sangervasio2.webp" alt="San Gervasio Archaeological Site" loading="lazy">
                             <h2>San Gervasio Archaeological Zone</h2>
                             <p>The island of Cozumel has more than ten registered archaeological sites of the pre-Columbian Mayan culture. The tourist visit to the site takes approximately three hours and a total distance of about 3 km is walked.</p>
+                            <p><a href="https://cozumelparks.com/san-gervasio/">Learn More</a></p>
                         </div>
                         <div class="visit-cozumel">
                             <img src="images/el-cielo.webp" alt="El cielo Beach" loading="lazy">
                             <h2>"El Cielo" Beach</h2>
-                            <p>Tranquil and picturesque white sand beach with crystal clear waters, ideal for snorkeling and photography</p> 
+                            <p>Tranquil and picturesque white sand beach with crystal clear waters, ideal for snorkeling and photography</p>
+                            <p><a href="https://descubro.mx/playa-el-cielo-en-cozumel/">Learn More</a></p> 
                         </div>   
                         <div class="visit-cozumel">
                             <img src="images/sanmiguel.webp" alt="San Miguel de Cozumel" loading="lazy">
                             <h2>San Miguel de Cozumel</h2>
-                            <p>There are several shopping centers, restaurants, bars, shops and small hotels. In San Miguel, one of the favorite places to visit is the Benito Juárez Park, a place that invites you to stop and look at the old Municipal Palace, with more than 100 years of construction, the monumental clock and the wooden houses from the beginning of the century.</p> 
+                            <p>There are several shopping centers, restaurants, bars, shops and small hotels. In San Miguel, one of the favorite places to visit is the Benito Juárez Park, a place that invites you to stop and look at the old Municipal Palace, with more than 100 years of construction, the monumental clock and the wooden houses from the beginning of the century.</p>
+                            <p><a href="https://en-cozumel.com.mx/san-miguel-cozumel/">Learn More</a></p>  
                         </div>
                             <div class="visit-cozumel">
                             <img src="images/pearlfarm.webp" alt="Pearl Farm" loading="lazy">
                             <h2>Pearl Farm</h2>
                             <p>The Cozumel Pearl Farm is the only active pearl farm in the Caribbean and is the best kept secret of the island. During the tour you will walk the facilities of the farm and find out how we cultivate our pearls and the patience needed for the long cultivation process and see some of the island's first farmed pearls.</p>
+                            <p><a href="https://www.cozumelpearlfarm.mx/">Learn More</a></p>
                         </div>
                         <div class="visit-cozumel">
                             <img src="images/kunche.webp" alt="Kun Che Sanctuary" loading="lazy">
                             <h2>Kun Che Sanctuary</h2>
                             <p>In this Mayan sanctuary, ball games are played just as the ancient Mayans did; In addition, it is revealed how corn tortillas, the Mayan tamale and chocolate are made. The tour ends with a traditional Mexican festival, and an authentic Mayan lunch.</p>
+                            <p><a href="https://turismo.cozumel.gob.mx/en/tour-item/parque-kun-che/">Learn More</a></p>
                         </div>
                         
                 </div>
