--- a/rental/index.html
+++ b/rental/index.html
@@ -64,7 +64,7 @@
                 <div class="overlay">
                     <div class="content">
                         <img src="images/deal.webp" alt="Deal of the month">
-                        <button><a href="reservation.html">Book Now!</a></button> 
+                        <a href="reservation.html"><button>Book Now</button></a> 
                     </div>
                 </div>
             </div>
@@ -159,7 +159,7 @@
                         </nav>
                     </div>    
                 </div>
-            </div>   
+             
             <hr>
             <div class="project-info">
                 <p>@2023 Scoots Rental | Sergio Flores | WDD 230 Project</p>
