--- a/rental/index.html
+++ b/rental/index.html
@@ -64,7 +64,7 @@
                 <div class="overlay">
                     <div class="content">
                         <img src="images/deal.webp" alt="Deal of the month">
-                        <a href="reservation.html"><button>Book Now</button></a> 
+                        <button onclick="window.location.href='reservation.html'">Book Now</button>
                     </div>
                 </div>
             </div>
