--- a/rental/index.html
+++ b/rental/index.html
@@ -86,6 +86,7 @@
                     <h1>3</h1>
                     <h2>Pick up / Delivery</h2>
                     <p>We offer the option to pick up scooter or car yourself at a time that is convenient for you or to be delivered at your hotel.</p>
+                    <p>You can find us <a href="contact.html">here</a></p>
                 </div>
             </div>
             <div id="info-cozumel">
