--- a/rental/thanks.html
+++ b/rental/thanks.html
@@ -55,9 +55,9 @@
         <main>   
             <div id="thankyou">
                 <h2>Thank you!</h2>
-                <p>We have received you contact request. We will get back to you as soon as possible.</p>
+                <p>We have received your contact request. We will get back to you as soon as possible.</p>
             </div>
-            <h3>In the meanwhile why dont you check all the fun activities you can do while in Cozumel</h3>
+            <h3>In the meanwhile why dont you check all the fun activities you can do while in Cozumel.</h3>
             <div id="funstuff">
                     <div class="fun-item">
                         <img src="images/snorkel.webp" alt="snorkelling" loading="lazy">
