--- a/rental/registered.html
+++ b/rental/registered.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content=" Rental Scooter Business.">
         <meta name="author" content="Sergio Flores">  
-        <title>Contact us</title>
+        <title>Thank you!</title>
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/base.css">
         <link rel="icon" href="images/favicon.ico" type="image/x-icon">  
